force-app/main/default/objects/Joint_Venture__c/Joint_Venture__c.object-meta.xml
<CustomObject>
    <description>Represents partnership agreements between operators and working interest partners for shared oil and gas operations.</description>
    <label>Joint Venture</label>
    <nameField>
        <label>JV Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Joint Ventures</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>