force-app/main/default/objects/Joint_Venture__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Joint Ventures</relationshipLabel>
    <relationshipName>Joint_Ventures</relationshipName>
    <type>Lookup</type>
</CustomField>