force-app/main/default/objects/Joint_Venture__c/fields/Accounting_Method__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Method__c</fullName>
    <label>Accounting Method</label>
    <type>Text</type>
    <length>255</length>
</CustomField>