force-app/main/default/objects/Joint_Venture__c/fields/JV_Agreement_Document__c.field-meta.xml
<CustomField>
    <fullName>JV_Agreement_Document__c</fullName>
    <label>JV Agreement Document</label>
    <type>Text</type>
    <length>255</length>
</CustomField>