force-app/main/default/objects/Joint_Venture__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Operated Joint Ventures</relationshipLabel>
    <relationshipName>Operated_Joint_Ventures</relationshipName>
    <type>Lookup</type>
</CustomField>