force-app/main/default/objects/Joint_Venture__c/fields/Partners__c.field-meta.xml
<CustomField>
    <fullName>Partners__c</fullName>
    <label>Partners</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>