force-app/main/default/objects/Joint_Venture__c/fields/Revenue_Interest_Percent__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Interest_Percent__c</fullName>
    <label>Revenue Interest Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>